tests/invalid/line_wrap.m
% line wrap must be escaped in this case
(a -
 b);
